Add dpanshug to opendatahub-io and ODH Dashboard Maintainers

--- a/config/opendatahub-io/org.yaml
+++ b/config/opendatahub-io/org.yaml
@@ -41,6 +41,7 @@ orgs:
     - dlabaj
     - dibryant
     - dimakis
+    - dpanshug
     - durandom
     - erwangranger
     - etirelli
@@ -275,6 +276,7 @@ orgs:
         - DaoDaoNoCode
         - manaswinidas
         - pnaik1
+        - dpanshug
         privacy: closed
         repos:
           odh-dashboard: maintain
